[package]
name = "pdgnc"
description = "an irc client"
version = "0.0.0"
authors = ["Aaron Weiss <awe@pdgn.co>"]

[workspace]
members = [ "./", "irc-client", "asset-server" ]

[dependencies]
asset-server = { version = "*", path = "asset-server" }
irc-client = { version = "*", path = "irc-client" }
web-view = "0.2"

[package.metadata.bundle]
name = "pdgnc"
identifier = "us.aaronweiss.pdgnc"
resources = ["dist"]
